--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w . --exec \"babel-node . --presets es2015,stage-0\"",
-    "build": "babel . -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
-    "test": "eslint ."
+    "build": "babel . -s -D -d dist --presets es2015,stage-0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
